--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -239,7 +239,7 @@
         </div>
       </div>
       <div class="card">
-        <a href="{% url 'searchbar' %}"><img src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}"  class="card-img-top" alt="...">
+        <a href="{% url 'searchbar' %}"><img src="{% static 'image/article/programing/search bar/info django.jpg'%}"  class="card-img-top" alt="...">
         <div class="image-text1">
           <h4>How to add a search bar in <span>Django</span> site</h4>
         </div></a>
