--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -66,7 +66,7 @@
         }
         .image-text1{
         position: absolute;
-        top: 42%;
+        top: 36%;
         left: 6px;
        }
 
@@ -89,7 +89,7 @@
         }
         .image-text1{
         position: absolute;
-        top: 42%;
+        top: 33%;
         left: 6px;
        }
       }
@@ -111,7 +111,7 @@
         }
         .image-text1{
         position: absolute;
-        top: 46%;
+        top: 39%;
         left: 6px;
        }
       }
@@ -228,7 +228,7 @@
           <p class="card-text">Everybody likes to play mobile games in the 20th century,  whether they are children or  youngsters we all love to play mobile games in our free time. As technology is increasing, the experience of playing mobile games is also increasing.</p>
           <div class="card-body">
             <form action="https://www.hipein.com/apps/best-android-game">
-              <button type="button" class="btn btn-outline-primary" style="width: 97%; position: absolute; bottom: 2px; margin-top: 5px; margin-left: -19px;">Read more</button>
+              <button type="submit" class="btn btn-outline-primary" style="width: 97%; position: absolute; bottom: 2px; margin-top: 5px; margin-left: -19px;">Read more</button>
             </form>
           </div>
         </div>
@@ -242,7 +242,7 @@
           <p class="card-text">It is very easy to use. flimorago is the best video editing app in 2020 with advanced features. It has more than 50 million downloads and nearly 417k user reviews according to the google play store.</p>
           <div class="card-body">
             <form action="https://www.hipein.com/apps/filmorago-Best-video-editing-app-in-2020">
-              <button type="button" class="btn btn-outline-primary" style="width: 97%; position: absolute; bottom: 2px; margin-top: 5px; margin-left: -19px;">Read more</button>
+              <button type="submit" class="btn btn-outline-primary" style="width: 97%; position: absolute; bottom: 2px; margin-top: 5px; margin-left: -19px;">Read more</button>
             </form>
           </div>
         </div>
@@ -256,7 +256,7 @@
           <p class="card-text">In this article, we are going to learn how to add a search bar on your website using the Django web framework. if don't know about the Django web framework <a href="https://docs.djangoproject.com/en/3.0/">click here</a>.</p>
           <div class="card-body">
             <form action="https://www.hipein.com/programing/search-bar-in-django">
-              <button type="button" class="btn btn-outline-primary" style="width: 97%; position: absolute; bottom: 2px; margin-top: 5px; margin-left: -19px;">Read more</button>
+              <button type="submit" class="btn btn-outline-primary" style="width: 97%; position: absolute; bottom: 2px; margin-top: 5px; margin-left: -19px;">Read more</button>
             </form>
           </div>
         </div>
