--- a/limbo/affiliate/templates/page/srch.html
+++ b/limbo/affiliate/templates/page/srch.html
@@ -185,7 +185,7 @@
         <a class="product_link" href="{% url 'home'%}">Home page</a><br>
       </div>
       <div class="copyright">
-        <p class="copyright_text">copyright &copy; | hipein.com 2020 | design by Rohit Raj</p>
+        <p class="copyright_text"> hipein.com &copy; 2020 | <a href="https://www.hipein.com/sitemap.xml">sitemap</a> | design by Rohit Raj</p>
       </div>
     </footer>
     <!-- script -->
