--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -152,7 +152,7 @@
         <a class="product_link" href="{% url 'home'%}">Home page</a><br>
       </div>
       <div class="copyright">
-        <p class="copyright_text"> hipein.com &copy; 2020 | <a href="https://www.hipein.com/sitemap.xml">sitemap</a> | design by Rohit Raj</p>
+        <p class="copyright_text"> hipein.com &copy; 2020 | design by Rohit Raj | <a href="https://www.hipein.com/sitemap.xml">sitemap</a> </p>
       </div>
     </footer>
     <script>
