--- a/limbo/affiliate/templates/mobile/mi/poco x3/poco-x3.html
+++ b/limbo/affiliate/templates/mobile/mi/poco x3/poco-x3.html
@@ -1,42 +1,40 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme 7 Pro price in India may be Rs 13,999 and its release date may be 2020 July 7. This smartphone comes with 3 variants like 4/64GB RAM, 6/64GB RAM, 6/128GB RAM. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Realme 7 Pro, Realme 7 Pro, Realme 7 Pro specification, Realme 7 Pro release date, Realme 7 Pro price, Realme 7 Pro price in india"> {% endblock key%}
-{% block style %}
-{% endblock style %}
+{% block desc%}<meta name="description" content="Poco X3 price in India may be Rs 13,999 and its release date may be 2020 July 7. This smartphone comes with 3 variants like 4/64GB RAM, 6/64GB RAM, 6/128GB RAM. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Poco X3, Poco X3, Poco X3 specification, Poco X3 release date, Poco X3 price, Poco X3 price in india"> {% endblock key%}
     {% load static %}
-    {% block title%}Realme 7 Pro price in india, specification and features - hipein{% endblock title%}
+    {% block title%}Poco X3 price in india, specification and features - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 style="font-weight: 400;">Realme is about to launch its new phone next month. Realme 7 Pro has a 5G support which is quite good at the range of 18,000 rs. </h4>
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Realme 7 Pro : 6/128 GB for Rs 17,999 Read Full review.</h1>
+          <h4 style="font-weight: 400;">Xiaomi next month is going to launch its new smartphone POCO X3. Now let's see what new feature Xiaomi is going to add to this phone. </h4>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Poco X3 : 6/64 GB for Rs 16,999 Read Full review.</h1>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/realme/realme-7-pro-2.jpg'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/mi/poco-x3-2.jpg'%}" alt="">
         </div>
-        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="https://www.youtube.com/watch?v=9EfT5hCH03c">All World Tony Stark</a></p>
+        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="https://www.youtube.com/watch?v=YdBVWiiPZGg">Tech Liver</a></p>
         <div class="info">
-          <h2 style="font-weight: 400;">About Realme 7 Pro</h2>
-          <p>Realme is now going to launch a new smartphone, takes it's series one step further, its name is Realme 7 Pro. <b>Realme 7 Pro</b> smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an 	Octa-core (2.4 GHz, Single core, Kryo 475 + 2.2 GHz, Single core, Kryo 475 + 1.8 GHz, Hexa Core, Kryo 475) processor and it runs on Qualcomm Snapdragon 765G Chipset. </p>
-          <p>Realme 7 Pro smartphone has an Super AMOLED display with 1080 x 2400 Pixels screen resolution and 395 PPI pixel density. Talking about its camera, On the front camera, you get a 32-megapixel primary camera and on the rear camera, there is a 64 megapixel wide-angle, 8 megapixels ultra-wide, 2-megapixel micro and 2-megapixels depth. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for 65W fast charging and non-removable 4500 mAh battery. </p>
-          <h3 style="font-weight: 400;">Realme 7 Pro price in India.</h3>
-          <p>Realme 7 Pro price in India start from Rs 17,999 and Realme 7 Pro  release date is 2020 September 01. This smartphone comes with two variants like 6/128GB RAM and 8/128GB RAM. It is available at one color options like black. </p>
-          <h3 style="font-weight: 400;">Realme 7 Pro Key features:</h3>
+          <h2 style="font-weight: 400;">About Poco X3</h2>
+          <p class="content">Xiaomi is now going to launch a new smartphone, takes it's Poco series one step further, its name is Poco X3. <b>Poco X3</b> smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an 	Octa-core (2.4 GHz, Single core, Kryo 475 + 2.2 GHz, Single core, Kryo 475 + 1.8 GHz, Hexa Core, Kryo 475) processor and it runs on Qualcomm Snapdragon 765G Chipset. </p>
+          <p class="content">Poco X3 smartphone has an IPS LCD display with 1080 x 2400 Pixels screen resolution and 395 PPI pixel density. Talking about its camera, On the front camera, you get a dual camera on front side with 	20-megapixel + 2-megapixel and on the rear camera, there is a 64 megapixel wide-angle, 8 megapixels ultra-wide, 2-megapixel micro and 2-megapixels depth. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and non-removable  5160 mAh battery. </p>
+          <h3 style="font-weight: 400;">Poco X3 price in India.</h3>
+          <p class="content">Poco X3 price in India start from Rs 16,999 and Poco X3  release date is 2020 September 05. This smartphone comes with Single variant like 6/64GB RAM. It is available at two color options like Black, and Gold. </p>
+          <h3 style="font-weight: 400;">Poco X3 Key features:</h3>
           <ul class="content">
-            <li>Diaplay: 6.4 inches</li>
+            <li>Diaplay: 	6.67 inches</li>
             <li>Processor: Qualcomm Snapdragon 765G</li>
-            <li>primary camera: 64-megapixel + 8-megapixel + 2-megapixel + 2-megapixel</li>
-            <li>selfie camera: 32-megapixel</li>
-            <li>Battery: Non-removable Li-Ion 4500 mAh battery</li>
-            <li>Fast charging 65W.</li>
+            <li>primary camera: 64-MP + 8-MP + 2-MP + 2-MP</li>
+            <li>selfie camera: 20-MP + 2-MP</li>
+            <li>Battery: Non-removable Li-Ion 5160 mAh battery</li>
+            <li>Fast charging.</li>
           </ul>
           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">Realme 7 Pro specification</h3>
+    <h3 class="spec_title">Poco X3 specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
@@ -44,7 +42,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Realsed on</strong>
-          <p>2020 September 01</p>
+          <p>2020 September 05<p>
         </div>
         <div class="specs_info">
           <strong>Amazon</strong>
@@ -64,15 +62,15 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Make</strong>
-          <p>Realme</p>
+          <p>POCO</p>
         </div>
         <div class="specs_info">
           <strong>Models</strong>
-          <p>7 Pro</p>
+          <p>X3</p>
         </div>
         <div class="specs_info1">
           <strong>Color</strong>
-          <p>Black</p>
+          <p>Black and Gold</p>
         </div>
       </div>
     </div>
@@ -96,7 +94,7 @@
         </div>
         <div class="specs_info">
           <strong>5G</strong>
-          <p>Yes - (network not rolled-out in India)</p>
+          <p>No</p>
         </div>
         <div class="specs_info1">
           <strong>SIM Type</strong>
@@ -112,11 +110,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Screen</strong>
-          <p>Super AMOLED capacitive touchscreen, 16M colors</p>
+          <p>	IPS LCD capacitive touchscreen, 16M colors</p>
         </div>
         <div class="specs_info">
           <strong>Size(inch)</strong>
-          <p>6.4</p>
+          <p>6.67</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
@@ -148,7 +146,7 @@
         </div>
         <div class="specs_info1">
           <strong>GPU</strong>
-          <p>Adreno 618</p>
+          <p>Adreno 620</p>
         </div>
       </div>
     </div>
@@ -164,7 +162,7 @@
         </div>
         <div class="specs_info1">
           <strong>Internal</strong>
-          <p>6/128GB RAM, 8/128GB RAM</p>
+          <p>6/64GB RAM</p>
         </div>
       </div>
     </div>
@@ -184,11 +182,11 @@
         </div>
         <div class="specs_info">
           <strong>Front Type</strong>
-          <p>Single</p>
+          <p>Dual</p>
         </div>
         <div class="specs_info">
           <strong>Front camera</strong>
-          <p> 32-megapixel</p>
+          <p>20-MP + 2-MP</p>
         </div>
       </div>
     </div>
@@ -200,11 +198,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong></strong>
-          <p>Li-Po 4500 mAh, non-removable</p>
+          <p>Li-Po 5160 mAh, non-removable</p>
         </div>
         <div class="specs_info">
           <strong>Charging</strong>
-          <p>Yes, Fast charging 65W</p>
+          <p>Yes, Fast charging</p>
         </div>
       </div>
     </div>
@@ -228,7 +226,7 @@
         </div>
         <div class="specs_info1">
           <strong>Radio</strong>
-          <p>Unspecified</p>
+          <p>Yes</p>
         </div>
       </div>
     </div>
@@ -240,7 +238,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>Fingerprint (under display, optical), accelerometer,</p>
+            <p>Fingerprint,	Light sensor, Accelerometer,</p>
         </div>
         <div class="specs_info1">
           <strong>Sensors</strong>
@@ -256,11 +254,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Loudspeaker</strong>
-          <p>Yes, with stereo speakers</p>
+          <p>Yes</p>
         </div>
         <div class="specs_info">
           <strong>3.5mm jack</strong>
-          <p>Unspecified</p>
+          <p>Yes</p>
         </div>
       </div>
     </div>
