--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -169,6 +169,39 @@
         <a href="{% url 'camera15k'%}">Best camera phone under <span>&#x20B9;</span>15000</a>
       </div>
     </div>
+    <!-- heading -->
+    <div class="main">
+      <h2 class="heading">upcoming</h2>
+    </div>
+    <!-- content -->
+    <div class="card-group">
+      <div class="card">
+        <a href="{% url 'pococ3' %}"><img src="{% static 'image/mobile/mi/poco-x3-2.jpg'%}" class="card-img-top" alt="...">
+        <div class="image-text">
+          <h4><span>REVIEW</span> POCO X3 : 3/32GB  Read Full review.</h4>
+        </div></a>
+        <div class="card-body card-body1">
+          <ul>
+            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>What can be the price of POCO X3 in India?</b></p></a></li>
+            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>When can POCO X3 be released in India?</b></p></a></li>
+            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="card">
+        <a href="{% url 'OnePlus_nord' %}"><img src="{% static 'image/mobile/realme/realme-7-pro-2.jpg'%}" class="card-img-top" alt="...">
+        <div class="image-text">
+          <h4><span>REVIEW</span> Realme 7 Pro : 6/128GB Read Full review</h4>
+        </div></a>
+        <div class="card-body card-body1">
+          <ul>
+            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>What can be the price of Realme 7 Pro in India?</b></p></a></li>
+            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>When can Realme 7 Pro be released in India?</b></p></a></li>
+            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <!-- main page content -->
     <div class="main">
       <h2 class="heading">Mobiles</h2>
@@ -178,7 +211,7 @@
       <div class="card">
         <a href="{% url 'pococ3' %}"><img src="{% static 'image/article/mobile/upcoming mobile/poco-c3.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> POCO C3 : 3/32GB  Watch Full review.</h4>
+          <h4><span>REVIEW</span> POCO C3 : 3/32GB  Read Full review.</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
@@ -191,7 +224,7 @@
       <div class="card">
         <a href="{% url 'OnePlus_nord' %}"><img src="{% static 'image/mobile/oneplus/oneplus-nord-2.jpg' %}" class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> onePlus nord 5G : 6/64GB Watch Full review</h4>
+          <h4><span>REVIEW</span> onePlus nord 5G : 6/64GB Read Full review</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
@@ -204,7 +237,7 @@
       <div class="card">
         <a href="{% url 'note20ultra' %}"><img src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-note-20-ultra.jpg'%}"  class="card-img-top" alt="...">
         <div class="image-text">
-          <h4><span>REVIEW</span> Galaxy Note 20 ultra : 8/256GB Watch Full review</h4>
+          <h4><span>REVIEW</span> Galaxy Note 20 ultra : 8/256GB Read Full review</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
