--- a/limbo/affiliate/templates/mobile/realme/realme 7 pro/realme-7-pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 7 pro/realme-7-pro.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme 7 Pro price in India may be Rs 13,999 and its release date may be 2020 July 7. This smartphone comes with 3 variants like 4/64GB RAM, 6/64GB RAM, 6/128GB RAM. - hipein "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Realme 7 Pro price in India may be Rs 17,999 and its release date may be 2020 september 1. This smartphone comes with 2 variants like 6/128GB RAM, 8/128GB RAM. - hipein "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Realme 7 Pro, Realme 7 Pro, Realme 7 Pro specification, Realme 7 Pro release date, Realme 7 Pro price, Realme 7 Pro price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
