--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -182,7 +182,7 @@
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>What can be the price of POCO X3 in India?</b></p></a></li>
+            <li><a href="{% url 'pocox3' %}"><p class="card-text"><b>What can be the price of POCO X3 in India?</b></p></a></li>
             <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>When can POCO X3 be released in India?</b></p></a></li>
             <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>Full specification</b></p></a></li>
           </ul>
@@ -195,7 +195,7 @@
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>What can be the price of Realme 7 Pro in India?</b></p></a></li>
+            <li><a href="{% url 'realme7pro' %}"><p class="card-text"><b>What can be the price of Realme 7 Pro in India?</b></p></a></li>
             <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>When can Realme 7 Pro be released in India?</b></p></a></li>
             <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>Full specification</b></p></a></li>
           </ul>
