--- a/limbo/affiliate/templates/blog/apps/air scanner/air-scanner.html
+++ b/limbo/affiliate/templates/blog/apps/air scanner/air-scanner.html
@@ -23,7 +23,7 @@
           <img class="image" src="{% static 'image/article/apps/air scanner/1.jpg'%}" alt="">
           <p></p>
           <hr class="my-2">
-          <p class="content"><b>Price</b>: Free-to-use<br><b>Download size</b>: 24 MB</p>
+          <p><b>Price</b>: Free-to-use<br><b>Download size</b>: 24 MB</p>
           <p>Talking about this app, its user interface is quite simple, which is easy for the user to understand. With this application, you can easily scan a document. The special thing about this app is that the AI narrator can read the entire document for you.</p>
           <p> In this article, I will tell you step by step how to use this app and share your document.</p>
           <div class="aff-link1">
@@ -41,10 +41,10 @@
           <p>If you have not downloaded the app yet, then download it from the link given above.</p>
           <p><b>Step 1.</b> With this application, you can scan docs, books, notes, receipts, and anything, just click the button below.</p>
           <div>
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -54,11 +54,11 @@
                   <img src="{% static 'image/article/apps/air scanner/3.jpg'%}" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
@@ -71,10 +71,10 @@
         <div class="info">
           <p><b>Step 2.</b> You can import the image directly from your gallery and another option is that you can take a document image using the app's camera.</p>
           <div>
-            <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -84,11 +84,11 @@
                   <img src="{% static 'image/article/apps/air scanner/5.jpg'%}" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
+              <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next">
+              <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
@@ -104,8 +104,8 @@
           <div>
             <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -115,11 +115,11 @@
                   <img src="{% static 'image/article/apps/air scanner/7.jpg'%}" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
@@ -132,6 +132,7 @@
         <div class="info">
           <p>Above mentioned steps are just a short guide to use this app. There are lots of other features that will amaze you, so without any hesitation choose <b>AIR Scanner</b> to scan your document. This is the best scanner app that I ever used in 2020. I hope my article will help you with what you are looking for. This is <a href="https://rb.gy/5rrdsp"></a>Prince Singh Rajput and Thanks for the support.</p>
           <hr class="my-2">
+          <div class="fb-comments" data-href="https://www.hipein.com/apps/air-scanner" data-numposts="5" data-width=""></div>
 
         </div>
         <!--  -->
