adds on air scanner:

--- a/limbo/affiliate/templates/blog/apps/air scanner/air-scanner.html
+++ b/limbo/affiliate/templates/blog/apps/air scanner/air-scanner.html
@@ -131,6 +131,14 @@
         <!-- 4 -->
         <div class="info">
           <p>Above mentioned steps are just a short guide to use this app. There are lots of other features that will amaze you, so without any hesitation choose <b>AIR Scanner</b> to scan your document. This is the best scanner app that I ever used in 2020. I hope my article will help you with what you are looking for. This is <a href="https://rb.gy/5rrdsp"></a>Prince Singh Rajput and Thanks for the support.</p>
+          <amp-ad width="100vw" height="320"
+            type="adsense"
+            data-ad-client="ca-pub-5452473448420018"
+            data-ad-slot="6308272419"
+            data-auto-format="rspv"
+            data-full-width="">
+            <div overflow=""></div>
+          </amp-ad>
           <hr class="my-2">
           <div class="fb-comments" data-href="https://www.hipein.com/apps/air-scanner" data-numposts="5" data-width=""></div>
 
