--- a/limbo/affiliate/templates/mobile/mi/poco x3/poco-x3.html
+++ b/limbo/affiliate/templates/mobile/mi/poco x3/poco-x3.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Poco X3 price in India may be Rs 13,999 and its release date may be 2020 July 7. This smartphone comes with 3 variants like 4/64GB RAM, 6/64GB RAM, 6/128GB RAM. - hipein "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Poco X3 price in India may be Rs 16,999 and its release date may be 2020 September 05. This smartphone comes with Single variant like 6/64GB RAM. - hipein "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Poco X3, Poco X3, Poco X3 specification, Poco X3 release date, Poco X3 price, Poco X3 price in india"> {% endblock key%}
     {% load static %}
     {% block title%}Poco X3 price in india, specification and features - hipein{% endblock title%}
@@ -17,12 +17,12 @@
         <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="https://www.youtube.com/watch?v=YdBVWiiPZGg">Tech Liver</a></p>
         <div class="info">
           <h2 style="font-weight: 400;">About Poco X3</h2>
-          <p class="content">Xiaomi is now going to launch a new smartphone, takes it's Poco series one step further, its name is Poco X3. <b>Poco X3</b> smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an 	Octa-core (2.4 GHz, Single core, Kryo 475 + 2.2 GHz, Single core, Kryo 475 + 1.8 GHz, Hexa Core, Kryo 475) processor and it runs on Qualcomm Snapdragon 765G Chipset. </p>
-          <p class="content">Poco X3 smartphone has an IPS LCD display with 1080 x 2400 Pixels screen resolution and 395 PPI pixel density. Talking about its camera, On the front camera, you get a dual camera on front side with 	20-megapixel + 2-megapixel and on the rear camera, there is a 64 megapixel wide-angle, 8 megapixels ultra-wide, 2-megapixel micro and 2-megapixels depth. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and non-removable  5160 mAh battery. </p>
+          <p>Xiaomi is now going to launch a new smartphone, takes it's Poco series one step further, its name is Poco X3. <b>Poco X3</b> smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an 	Octa-core (2.4 GHz, Single core, Kryo 475 + 2.2 GHz, Single core, Kryo 475 + 1.8 GHz, Hexa Core, Kryo 475) processor and it runs on Qualcomm Snapdragon 765G Chipset. </p>
+          <p>Poco X3 smartphone has an IPS LCD display with 1080 x 2400 Pixels screen resolution and 395 PPI pixel density. Talking about its camera, On the front camera, you get a dual camera on front side with 	20-megapixel + 2-megapixel and on the rear camera, there is a 64 megapixel wide-angle, 8 megapixels ultra-wide, 2-megapixel micro and 2-megapixels depth. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and non-removable  5160 mAh battery. </p>
           <h3 style="font-weight: 400;">Poco X3 price in India.</h3>
-          <p class="content">Poco X3 price in India start from Rs 16,999 and Poco X3  release date is 2020 September 05. This smartphone comes with Single variant like 6/64GB RAM. It is available at two color options like Black, and Gold. </p>
+          <p>Poco X3 price in India start from Rs 16,999 and Poco X3  release date is 2020 September 05. This smartphone comes with Single variant like 6/64GB RAM. It is available at two color options like Black, and Gold. </p>
           <h3 style="font-weight: 400;">Poco X3 Key features:</h3>
-          <ul class="content">
+          <ul>
             <li>Diaplay: 	6.67 inches</li>
             <li>Processor: Qualcomm Snapdragon 765G</li>
             <li>primary camera: 64-MP + 8-MP + 2-MP + 2-MP</li>
@@ -241,7 +241,7 @@
             <p>Fingerprint,	Light sensor, Accelerometer,</p>
         </div>
         <div class="specs_info1">
-          <strong>Sensors</strong>
+          <strong></strong>
             <p>proximity, compass</p>
         </div>
       </div>
