--- a/limbo/affiliate/templates/mobile/realme/realme 7 pro/realme-7-pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 7 pro/realme-7-pro.html
@@ -243,7 +243,7 @@
             <p>Fingerprint (under display, optical), accelerometer,</p>
         </div>
         <div class="specs_info1">
-          <strong>Sensors</strong>
+          <strong></strong>
             <p>proximity, compass</p>
         </div>
       </div>
