--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -176,28 +176,28 @@
     <!-- content -->
     <div class="card-group">
       <div class="card">
-        <a href="{% url 'pococ3' %}"><img src="{% static 'image/mobile/mi/poco-x3-2.jpg'%}" class="card-img-top" alt="...">
+        <a href="{% url 'pocox3' %}"><img src="{% static 'image/mobile/mi/poco-x3-2.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
           <h4><span>REVIEW</span> POCO X3 : 3/32GB  Read Full review.</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
             <li><a href="{% url 'pocox3' %}"><p class="card-text"><b>What can be the price of POCO X3 in India?</b></p></a></li>
-            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>When can POCO X3 be released in India?</b></p></a></li>
-            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 'pocox3' %}"><p class="card-text"><b>When can POCO X3 be released in India?</b></p></a></li>
+            <li><a href="{% url 'pocox3' %}"><p class="card-text"><b>Full specification</b></p></a></li>
           </ul>
         </div>
       </div>
       <div class="card">
-        <a href="{% url 'OnePlus_nord' %}"><img src="{% static 'image/mobile/realme/realme-7-pro-2.jpg'%}" class="card-img-top" alt="...">
+        <a href="{% url 'realme7pro' %}"><img src="{% static 'image/mobile/realme/realme-7-pro-2.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
           <h4><span>REVIEW</span> Realme 7 Pro : 6/128GB Read Full review</h4>
         </div></a>
         <div class="card-body card-body1">
           <ul>
             <li><a href="{% url 'realme7pro' %}"><p class="card-text"><b>What can be the price of Realme 7 Pro in India?</b></p></a></li>
-            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>When can Realme 7 Pro be released in India?</b></p></a></li>
-            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 'realme7pro' %}"><p class="card-text"><b>When can Realme 7 Pro be released in India?</b></p></a></li>
+            <li><a href="{% url 'realme7pro' %}"><p class="card-text"><b>Full specification</b></p></a></li>
           </ul>
         </div>
       </div>
