--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -43,6 +43,9 @@
       span{
         color: red;
       }
+      .card-img-top{
+        height: 250px;
+      }
       .card-body1{
         margin-left: -13px;
         padding: 5px;
@@ -96,6 +99,9 @@
       @media (max-width: 768px){
         .carousel-item img{
           height: 200px;
+        }
+        .card-img-top{
+          height: 210px;
         }
         .card-group{
           width: 100%;
