--- a/limbo/affiliate/templates/mobile/realme/realme 7/realme-7.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 7/realme-7.html
@@ -259,5 +259,8 @@
         </div>
       </div>
     </div>
+    <div class="comment">
+      <div style="background: white;" class="fb-comments" data-href="https://www.hipein.com/mobile/realme-7" data-numposts="5" data-width=""></div>
+    </div>
   </div>
 {% endblock specs%}
