--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -296,7 +296,7 @@
       <div class="card">
         <a href="{% url 'searchbar' %}"><img src="{% static 'image/article/programing/search bar/info django.jpg'%}"  class="card-img-top" alt="...">
         <div class="image-text1">
-          <h4>How to add a search bar in <span>Django</span> site</h4>
+          <h4>learn how to add a search bar on your <span>Django</span> site</h4>
         </div></a>
         <div class="card-body card-text1">
           <p class="card-text">In this article, we are going to learn how to add a search bar on your website using the Django web framework. if don't know about the Django web framework <a href="https://docs.djangoproject.com/en/3.0/">click here</a>.</p>
