--- a/limbo/affiliate/templates/page/base.html
+++ b/limbo/affiliate/templates/page/base.html
@@ -7,6 +7,7 @@
     {% block key%} {% endblock key%}
     {% load static %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174458117-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
