--- a/limbo/affiliate/templates/page/base.html
+++ b/limbo/affiliate/templates/page/base.html
@@ -7,6 +7,7 @@
     {% block key%} {% endblock key%}
     {% load static %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>
+    <script data-ad-client="ca-pub-5452473448420018" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174458117-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
