--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -10,6 +10,7 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="DMyYgz5Q"></script>
     <script src="https://platform-api.sharethis.com/js/sharethis.js#property=5f350ba3de52a0001208d87c&product=inline-share-buttons" async="async"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script data-ad-client="ca-pub-5452473448420018" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174458117-2"></script>
     <script>
