--- a/limbo/affiliate/templates/page/srch.html
+++ b/limbo/affiliate/templates/page/srch.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-174458117-2"></script>
+    <script data-ad-client="ca-pub-5452473448420018" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script src="https://kit.fontawesome.com/536f45e617.js" crossorigin="anonymous"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
