--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -106,12 +106,12 @@
         }
         .image-text{
         position: absolute;
-        top: 49%;
+        bottom: 35%;
         left: 6px;
         }
         .image-text1{
         position: absolute;
-        top: 39%;
+        bottom: 45%;
         left: 6px;
        }
       }
