--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -106,12 +106,24 @@
         }
         .image-text{
         position: absolute;
-        bottom: 35%;
+        top: 49%;
         left: 6px;
         }
         .image-text1{
         position: absolute;
-        bottom: 45%;
+        top: 39%;
+        left: 6px;
+       }
+      }
+      @media (max-width: 768px){
+        .image-text{
+        position: absolute;
+        top: 40%;
+        left: 6px;
+        }
+        .image-text1{
+        position: absolute;
+        top: 30%;
         left: 6px;
        }
       }
