--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -115,17 +115,16 @@
         left: 6px;
        }
       }
-      @media (max-width: 668px){
+      @media (max-width: 600px){
         .image-text{
         position: absolute;
-        top: 40%;
+        top: 36%;
         left: 6px;
         }
-        .image-text1{
-        position: absolute;
-        top: 30%;
-        left: 6px;
-       }
+        .image-text1 h4{
+          color: white;
+          font-weight: 500;
+        }
       }
     </style>
     {% endblock style %}
