--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -115,13 +115,13 @@
         left: 6px;
        }
       }
-      @media (max-width: 600px){
+      @media (min-width: 600px){
         .image-text{
         position: absolute;
-        top: 36%;
+        top: 40%;
         left: 6px;
         }
-        .image-text1 h4{
+        .image-text h4{
           color: white;
           font-weight: 500;
         }
