--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -24,7 +24,7 @@
       }
       .image-text{
         position: absolute;
-        top: 52%;
+        bottom: 30%;
         left: 6px;
       }
       .image-text h4{
@@ -33,7 +33,7 @@
       }
       .image-text1{
         position: absolute;
-        top: 41%;
+        bottom: 40%;
         left: 6px;
       }
       .image-text1 h4{
@@ -61,12 +61,12 @@
 
         .image-text{
         position: absolute;
-        top: 40%;
+        bottom: 42%;
         left: 6px;
         }
         .image-text1{
         position: absolute;
-        top: 36%;
+        top: 47%;
         left: 6px;
        }
 
@@ -84,12 +84,12 @@
         }
         .image-text{
         position: absolute;
-        top: 40%;
+        bottom: 43%;
         left: 6px;
         }
         .image-text1{
         position: absolute;
-        top: 33%;
+        bottom: 52%;
         left: 6px;
        }
       }
@@ -104,6 +104,16 @@
         .card-body ul{
           font-size: 15px;
         }
+        .image-text{
+        position: absolute;
+        top: 49%;
+        left: 6px;
+        }
+        .image-text1{
+        position: absolute;
+        top: 39%;
+        left: 6px;
+       }
       }
     </style>
     {% endblock style %}
