--- a/limbo/affiliate/templates/mobile/realme/realme 7/realme-7.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 7/realme-7.html
@@ -239,7 +239,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>Fingerprin, accelerometer, proximity, compass</p>
+            <p>Fingerprint, accelerometer, proximity, compass</p>
         </div>
       </div>
     </div>
