--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 8t/oneplus-8t.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 8t/oneplus-8t.html
@@ -265,7 +265,7 @@
       </div>
     </div>
     <div class="comment">
-      <div style="background: white;" class="fb-comments" data-href="https://www.hipein.com/mobile/realme-7" data-numposts="5" data-width=""></div>
+      <div class="fb-comments" data-href="https://www.hipein.com/mobile/oneplus-8t" data-numposts="5" data-width=""></div>
     </div>
   </div>
 
