--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 8t/oneplus-8t.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 8t/oneplus-8t.html
@@ -14,7 +14,7 @@
           <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> OnePlus 8T (8/128 GB) price in india, Rumours, specification and features.</h1>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/oneplus/oneplus-8t-1.jpg'%}" alt="">
+          <img class="image" src="{% static 'image/banner/oneplus-8t-b.jpg' %}" alt="">
         </div>
         <p class="content" style="border-bottom: 1px solid #eee;"></p>
         <div class="info">
@@ -52,7 +52,7 @@
         </div>
         <div class="specs_info1">
           <strong>Flipkart</strong>
-          <p>Cooming soon</p>
+          <p>Coming soon</p>
         </div>
       </div>
     </div>
