--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -136,7 +136,7 @@
             <img src="{% static 'image/banner/samsung-M31-b-2.png' %}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="{% static 'image/banner/Realme-6-Pro-b.png' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'image/banner/oneplus-8t-b.jpg' %}" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
