--- a/limbo/affiliate/templates/mobile/realme/realme 7 pro/realme-7-pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 7 pro/realme-7-pro.html
@@ -264,5 +264,8 @@
         </div>
       </div>
     </div>
+    <div class="comment">
+      <div class="fb-comments" data-href="https://www.hipein.com/mobile/realme-7-pro" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
+    </div>
   </div>
 {% endblock specs%}
