--- a/limbo/affiliate/templates/mobile/realme/realme 7/realme-7.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 7/realme-7.html
@@ -260,7 +260,7 @@
       </div>
     </div>
     <div class="comment">
-      <div style="background: white;" class="fb-comments" data-href="https://www.hipein.com/mobile/realme-7" data-numposts="5" data-width=""></div>
+      <div class="fb-comments" data-href="https://www.hipein.com/mobile/realme-7" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
     </div>
   </div>
 {% endblock specs%}
