--- a/limbo/affiliate/templates/blog/game/FAUG/FAUG.html
+++ b/limbo/affiliate/templates/blog/game/FAUG/FAUG.html
@@ -69,7 +69,7 @@
           <p>Stay tuned with us and we will keep sending you news of such game and technology.</p>
 
           <hr class="my-2">
-          <div class="fb-comments" data-href="https://thesocialdigital.com/after-pubg-ban-akshay-kumar-launch-fau-g-action-game" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
+          <div class="fb-comments" data-href="https://www.hipein.com/game/faug-made-in-india" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
         </div>
         <!--  -->
       </div>
