--- a/limbo/affiliate/templates/page/privacy&policy.html
+++ b/limbo/affiliate/templates/page/privacy&policy.html
@@ -2,7 +2,7 @@
 {% block desc%}<meta name="description" content="If you are an advertiser or PR (public relations) agent looking for advertisements or reviews on  hipein and would like to get in touch with us. You can write to us at the email address below."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="hipein contact us, contact us hipein"> {% endblock key%}
   {% load static %}
-    {% block title%}Contact Us - hipein.com{% endblock title%}
+    {% block title%}Privacy & Policy  - hipein.com{% endblock title%}
     {% block content%}
     {% block style %}
     <style>
