--- a/limbo/affiliate/templates/page/base.html
+++ b/limbo/affiliate/templates/page/base.html
@@ -16,6 +16,15 @@
 
       gtag('config', 'UA-174458117-2');
     </script>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script>
+      window.OneSignal = window.OneSignal || [];
+      OneSignal.push(function() {
+        OneSignal.init({
+          appId: "84352b0b-5a13-43be-9c96-42508f28dcdd",
+        });
+      });
+    </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     {% block style %} {% endblock style %}
