--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -15,7 +15,16 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-174458117-2');
-      </script>
+    </script>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script>
+      window.OneSignal = window.OneSignal || [];
+      OneSignal.push(function() {
+        OneSignal.init({
+          appId: "84352b0b-5a13-43be-9c96-42508f28dcdd",
+        });
+      });
+    </script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
